--- a/README
+++ b/README
@@ -1,9 +1,7 @@
 The Flower
 **********
 
-The Flower is a small C program that syncs a 3D visual to Fourier analysis of MP3 music. It uses gcc + mpglib + OpenGL for visuals and compiles in 
-Linux. The demo is derived from a broader non-released VJ platform, which has been used e.g. at the Koneisto, piksel.no, Pixelache and ISEA
-festivals.
+The Flower is a small C program that syncs a 3D visual to Fourier analysis of MP3 music. It uses gcc + mpglib + OpenGL for visuals and compiles in Linux. The demo is derived from a broader non-released VJ platform, which has been used e.g. at the Koneisto, piksel.no, Pixelache and ISEA festivals.
 
 You can try this demo with the two included songs Track1.mp3 and Track2.mp3. 
 
