--- a/README
+++ b/README
@@ -7,7 +7,7 @@ The Flower is a small C program that syncs a 3D visual to Fourier analysis of MP
 and compiles in Linux. The  demo is derived from a broader non-released VJ platform, which has been used e.g. at 
 the Koneisto, piksel.no, Pixelache and ISEA festivals.
 
-You can try this demo with the two included songs Track1.mp3 and Track2.mp3. 
+You can try this demo with the included song Track1.mp3. 
 
 Installation and use:
 ********************
